# LeadGen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: API_KEYS.md  ARCHITECTURE.md  CLIENT_GUIDE.md  GETTING_STARTED.md  MCP_SETUP.md  SMTP_SETUP.md
examples/: leads_sample.csv
src/: cli.py  models.py
src/ai/: drafter.py  scorer.py
src/crm/: database.py
src/leadgen/: __init__.py  _time.py  cli.py  mcp.py  models.py  text.py
src/leadgen/ai/: __init__.py  drafter.py  scorer.py
src/leadgen/config/: __init__.py  loader.py
src/leadgen/crm/: __init__.py  database.py  suppression.py  update_lead.py
src/leadgen/enrichment/: __init__.py  enricher.py
src/leadgen/mcp_server/: __init__.py  server.py
src/leadgen/outreach/: __init__.py  email.py
src/leadgen/sources/: __init__.py  apollo.py  crawler.py  csv_import.py  email_scraper.py  hunter.py  maps.py  pdl.py  pdl_industries.py
src/mcp_server/: server.py
src/outreach/: email.py
src/sources/: apollo.py  hunter.py
tests/: conftest.py  test_base_classes.py  test_config_loader.py  test_csv_import.py  test_db.py  test_deferred_status.py  test_drafter_formatting.py  test_drafter_offline.py  test_email_scraper.py  test_identity.py  test_mcp_draft_review.py  test_mcp_import.py  test_mcp_score_leads.py  test_mcp_suppress.py  test_mcp_update_lead.py  test_models.py  test_outreach_email.py  test_scorer_offline.py  test_send_test_draft.py  test_signature.py  test_sources_http.py  test_suppression.py  test_update_lead.py
tests/fixtures/scraper/: appointments_page.html  contact_mailto.html  homepage_gmail_only.html  homepage_with_nav.html  obfuscated_email.html  placeholder_only.html  prose_artifacts.html
